--- a/css/styles.scss
+++ b/css/styles.scss
@@ -884,19 +884,19 @@ header {
 
                 &:nth-child(1){
                     .content {
-                        background-image: url("../images/DE_Intro-to-stocks.png");
+                        background-image: url("../images/Thumbnail\ Chapter\ 1.png");
                     }
                 }
 
                 &:nth-child(2) { 
                     .content {
-                        background-image: url("../images/DE_How-to-choose-your-stocks.png");
+                        background-image: url("../images/Thumbnail\ Chapter\ 2.png");
                     }
                 }
 
                 &:nth-child(3) { 
                     .content {
-                        background-image: url("../images/DE_How-to-trade-stocks.png");
+                        background-image: url("../images/Thumbnail\ Chapter\ 3.png")
                     }
                 }
 
@@ -970,11 +970,7 @@ header {
                 width: 300px;
                 height: 100px;
             }
-<<<<<<< HEAD
-            
-=======
 
->>>>>>> aa58eba4b2f0a71f383bb666fa57897bc11c62e5
             &:last-child {
                 margin-right: 0;
             }
