--- a/css/styles.css
+++ b/css/styles.css
@@ -812,13 +812,13 @@ header .container .navigation a:hover p {
   font-weight: 600;
 }
 .about .chapters ul li:nth-child(1) .content {
-  background-image: url("../images/DE_Intro-to-stocks.png");
+  background-image: url("../images/Thumbnail Chapter 1.png");
 }
 .about .chapters ul li:nth-child(2) .content {
-  background-image: url("../images/DE_How-to-choose-your-stocks.png");
+  background-image: url("../images/Thumbnail Chapter 2.png");
 }
 .about .chapters ul li:nth-child(3) .content {
-  background-image: url("../images/DE_How-to-trade-stocks.png");
+  background-image: url("../images/Thumbnail Chapter 3.png");
 }
 .about .chapters ul li:nth-child(4) .content {
   background-image: url("../images/ebook.png");
